[package]
name = "comms"
version = "0.1.0"
edition = "2021"
rust-version = "1.60"
publish = false


[features]
client = ["ewebsock"]
server = [
    "futures-channel",
    "futures-util",
    "tokio-tungstenite",
    "tokio",
    "tungstenite",
]
tls = [
    "ewebsock/tls",
    "tungstenite/rustls-tls-webpki-roots", # TODO: there is some problem with this. check alternative tungstenite tls features
]


[dependencies]
log_types = { path = "../log_types", features = ["serde"] }

anyhow = "1.0.56"
bincode = "1.3"
tracing = "0.1"

# Client:
ewebsock = { version = "0.1", optional = true }

# Server:
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
futures-channel = { version = "0.3", optional = true }
futures-util = { version = "0.3", optional = true, default-features = false, features = [
    "sink",
    "std",
] }
parking_lot = "0.12"
tokio-tungstenite = { version = "0.17.1", optional = true }
tokio = { version = "1.0.0", optional = true, default-features = false, features = [
    "io-std",
    "macros",
    "net",
    "rt-multi-thread",
    "sync",
    "time",
] }
tungstenite = { version = "0.17", optional = true, default-features = false }
