[package]
name = "dimos-viewer"
version = "0.32.0-alpha.1"
edition = "2024"
rust-version = "1.92"
license = "MIT OR Apache-2.0"
publish = false
description = "DimOS Interactive Viewer — custom Rerun viewer with LCM click-to-navigate"

[[bin]]
name = "dimos-viewer"
path = "src/viewer.rs"

[lib]
name = "dimos_viewer"
path = "src/lib.rs"

[features]
default = []
analytics = ["rerun/analytics"]

[dependencies]
rerun = { path = "../crates/top/rerun", default-features = false, features = [
  "native_viewer",
  "run",
  "server",
] }

bincode.workspace = true
clap.workspace = true
futures-util.workspace = true
mimalloc.workspace = true
parking_lot.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
tokio = { workspace = true, features = [
  "io-util",
  "macros",
  "net",
  "rt-multi-thread",
  "signal",
  "sync",
  "time",
] }
tokio-tungstenite = "0.28.0"
url.workspace = true

[lints]
workspace = true
