[package]
name = "objectron"
version = "0.1.0"
edition = "2021"
rust-version = "1.60"
license = "MIT OR Apache-2.0"
publish = false


[dependencies]
log_types = { path = "../log_types" }
viewer = { path = "../viewer" }

anyhow = "1"
clap = "3.1"
glam = "0.20" # to convert rotation matrices to quaternions
image = { version = "0.23", default-features = false, features = ["jpeg"] }
itertools = "0.10"
prost = "0.10"
tracing = "0.1"
tracing-subscriber = "0.3"

[build-dependencies]
prost-build = "0.10"
