[project]
name = "rerun-pixi-env"
version = "0.1.0"
description = "Pixi environment setup utilities for Rerun"
requires-python = ">=3.10"

[project.scripts]
ensure-rerun-env = "rerun_pixi_env:main"
uv-shim = "rerun_pixi_env:uv_shim_main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/rerun_pixi_env"]
